--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>it.pasqualecavallo.studentsmaterial</groupId>
+			<artifactId>authorization-framework</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
